# local-ai-cpu

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: contact.txt  contact_schema.json  product_listing.txt  product_schema.json
scripts/: download_model.py
src/local_ai_cpu/: __init__.py  app.py  config.py  pipeline.py
src/local_ai_cpu/extraction/: __init__.py  extractor.py  llm.py  prompts.py  schema.py
src/local_ai_cpu/ingestion/: __init__.py  base.py  dispatcher.py  ocr.py  pdf.py  text.py
src/local_ai_cpu/metrics/: __init__.py  monitor.py
src/local_ai_cpu/processing/: __init__.py  chunker.py  normalize.py
src/local_ai_cpu/storage/: __init__.py  database.py  repository.py
tests/: conftest.py  test_app_helpers.py  test_ingestion.py  test_pipeline_offline.py  test_schema_validation.py  test_storage.py
