[project]
name = "local-ai-cpu"
version = "0.1.0"
description = "Offline-first, CPU-optimized extraction of structured data from unstructured documents"
readme = "README.md"
authors = [
    { name = "arnav2207", email = "arnavavuturu2207@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32",
    "llama-cpp-python>=0.3",
    "jsonschema>=4.21",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "pytesseract>=0.3",
    "psutil>=5.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
local-ai-cpu = "local_ai_cpu:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that load a local model (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
